.metals/.reports/metals/r_scala-toplevel-mtags_1691523517013
id: file://<WORKSPACE>/src/main/scala/gcd/lab2/exercise2.scala:[39..39) in Input.VirtualFile("file://<WORKSPACE>/src/main/scala/gcd/lab2/exercise2.scala", "package lab2
import chisel3 . _

class ")
file://<WORKSPACE>/src/main/scala/gcd/lab2/exercise2.scala:4: error: expected identifier; obtained eof
class 
      ^